# media_booth-v0.1_web

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py
app/api/: router.py
app/api/endpoints/: booths.py  health.py  media.py  parking.py  settings.py
app/core/: config.py
app/route/: pages.py
app/schemas/: booth.py  config.py
app/services/: booth_service.py  deps.py  media_service.py  parking_service.py  settings_service.py  sse_service.py
app/web/static/css/: management.css  styles.css
app/web/static/js/: main.js  management.js  utils.js
app/web/templates/: index.html  management.html
config/: settings.yaml
nginx/: default.conf
