[tool.poetry]
name = "parking-media-wall"
version = "0.2.0"
description = "Multi-booth media wall manager with PostgreSQL settings storage"
authors = ["OpenAI <support@openai.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
httpx = "^0.28.1"
jinja2 = "^3.1.6"
pydantic = "^2.11.7"
python-multipart = "^0.0.20"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
